controller/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: roam-controller-service
  labels:
    app: roam-controller
spec:
  type: LoadBalancer
  ports:
  - port: 8001
    targetPort: 8001
    protocol: TCP
  selector:
    app: roam-controller
